--- a/Virtual Piano/Virtual Piano/task/src/style.css
+++ b/Virtual Piano/Virtual Piano/task/src/style.css
@@ -1,12 +1,5 @@
-
-kbd {
-    display: inline-block;
-    background-color: white;
-    border: #ab7d5c solid 3px;
-    padding: 120px 40px;
-    margin-top: 150px;
-    margin-left: -7px;
-    text-align: center;
+body {
+    background-color: #1c1c1c;
 }
 
 .container {
@@ -14,6 +7,35 @@ kbd {
     max-width: 63%;
 }
 
-body {
-    background-color: #1c1c1c;
+div.black-keys {
+    position: relative;
+    z-index: 100;
+    left: 20px;
+    top: 202px;
+}
+
+.black-keys kbd {
+    display: inline-block;
+    background-color: black;
+    color: white;
+    border: #ab7d5c solid 3px;
+    padding: 30px 20px;
+    padding-top: 150px;
+    margin-left: 25px;
+    text-align: center;
+}
+
+#keyT, #keyU, #keyY {
+    position: relative;
+    left: 75px;
+}
+
+.white-keys kbd {
+    display: inline-block;
+    background-color: white;
+    border: #ab7d5c solid 3px;
+    padding: 30px 35px;
+    padding-top: 250px;
+    margin-left: -7px;
+    text-align: center;
 }
